--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,80 @@
 /env
+
+# copied from ethereum/trinity
+
+*.py[cod]
+
+# C extensions
+*.so
+
+# Packages
+*.egg
+*.egg-info
+dist
+build
+eggs
+parts
+var
+sdist
+develop-eggs
+.installed.cfg
+lib
+lib64
+
+# Installer logs
+pip-log.txt
+
+# Unit test / coverage reports
+.coverage
+.tox
+nosetests.xml
+
+# Translations
+*.mo
+
+# Mr Developer
+.mr.developer.cfg
+.project
+.pydevproject
+
+# Complexity
+output/*.html
+output/*/index.html
+
+# Sphinx
+docs/_build
+docs/modules.rst
+
+# pytest
+.cache/
+.pytest_cache/
+
+# fixtures
+./fixtures/**
+
+# profiling
+prof/**
+
+# hypothesis
+.hypothesis/
+
+# mypy
+.mypy_cache/
+*.swp
+docs/evm.*rst
+venv*
+.eggs/
+
+# vscode
+.vscode/**
+
+# monkeytype
+monkeytype.sqlite3
+
+# pyenv
+.python-version
+
+# idea
+.idea/**
+
+!tests/integration/fixtures/*.ldb.zip
